# flatmap-viewer

./: .gitignore  .gitmodules  .readthedocs.yml  ANNOTATION.rst  README.rst  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release.sh  tsconfig.json  typedoc.json  vite.config.ts  webpack.config.js
app/: index.html  index.js  index.ts
docs/: CHANGES.md  conf.py  requirements.txt
lib/: index.ts
src/: annotation.js  contextmenu.js  contextmenu.ts  controls.js  flatmap-types.ts  flatmap-viewer.js  flatmap-viewer.ts  flatmap.ts  images.ts  info.js  interactions.js  interactions.ts  layers.js  main.js  mapserver.js  mapserver.ts  mathjax.js  mathjax.ts  minimap.js  pathways.js  pathways.ts  search.js  search.ts  styling.js  systems.js  systems.ts  types.ts  utils.js  utils.ts  viewer.ts
src/controls/: annotation.js  annotation.ts  centreline.js  controls.js  controls.ts  flightpaths.js  flightpaths.ts  info.js  info.ts  minimap.js  minimap.ts  nerves.js  nerves.ts  paths.js  paths.ts  paths3d.js  search.js  search.ts  systems.js  systems.ts  taxons.js  taxons.ts
src/filters/: facets.ts  index.ts  pathtype.ts  taxon.ts
src/filters/facets/: details.ts  index.ts  (+3 more)
src/knowledge/: graphs.ts  index.ts  uberon.ts
src/layers/: acluster.ts  anatomical-cluster.ts  cluster.js  cluster.ts  deckgl.ts  facets.ts  filter.js  filter.ts  flightpaths.js  flightpaths.ts  index.js  index.ts  paths3d.js  styling.js  styling.ts  svglayer.ts
src/markers/: index.ts
static/: flatmap-viewer.css
static/css/: flatmap-viewer.css
